# pySigma-backend-panther

./: .gitignore  LICENSE  Makefile  README.md  print-coverage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  tag.yml  test.yml  test_release_publish.yml  version.yml
sigma/backends/panther/: __init__.py  panther_backend.py  panther_sdyaml_backend.py
sigma/backends/panther/helper_functions/: python_helper.py  sdyaml_helper.py
sigma/backends/panther/helpers/: base.py  pantherflow_helper.py  python_helper.py  sdyaml_helper.py
sigma/backends/panther_python/: __init__.py  panther_python.py  panther_python_backend.py
sigma/backends/panther_sdyaml/: __init__.py  panther_sdyaml_backend.py
sigma/pipelines/panther/: __init__.py  carbon_black_panther_pipeline.py  crowdstrike_panther_pipeline.py  gcp_audit_panther_pipeline.py  panther_pipeline.py  panther_sdyaml_pipeline.py  processing.py  replace_condition_ends_with.py  sdyaml_transformation.py  sentinelone_panther_pipeline.py  sysmon_panther_pipeline.py  windows.py  windows_panther_pipeline.py
sigma/pipelines/panther_python/: __init__.py  panther_pipeline.py  panther_python.py
tests/: conftest.py  test_backend_panther_python.py  test_carbon_black_panther_pipeline.py  test_crowdstrike_panther_pipeline.py  test_gcp_audit_panther_converting.py  test_gcp_audit_panther_pipeline.py  test_panther_backend.py  test_panther_pantherflow_backend.py  test_panther_python_backend.py  test_panther_python_pipeline.py  test_panther_sdyaml_backend.py  test_panther_sdyaml_pipeline.py  test_pipelines_panther_python.py  test_processing.py  test_replace_condition_ends_with.py  test_sdyaml_transformation.py  test_sentinelone_panther_pipeline.py  test_sysmon_panther_pipeline.py  test_windows_panther_pipeline.py
