[tool.poetry]
name = "pySigma-backend-panther-sdyaml"
version = "0.1.3"
description = "pySigma backend for Panther"
authors = ["Josh Esbrook <jehockey@umich.edu>", "Oleh Melenevskyi <olehmelenevskyi@gmail.com>"]
maintainers = ["Panther Labs Inc <pypi@runpanther.io>"]
license = "LGPL-3.0-only"
repository = "https://github.com/panther-labs/pySigma-backend-panther-sdyaml"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10"
pysigma-pipeline-crowdstrike = "^1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
coverage = "^7.1.0"
sigma-cli = "^0.7"
black = "^23.11"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
line_length = 100
profile = "black"
