[tool.poetry]
name = "pySigma-backend-panther"
version = "0.2.5"
description = "pySigma backend for Panther"
authors = ["Panther Labs Inc <pypi@runpanther.io>"]
maintainers = ["Panther Labs Inc <pypi@runpanther.io>"]
license = "LGPL-3.0-only"
repository = "https://github.com/panther-labs/pySigma-backend-panther"
packages = [{ include = "sigma" }]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"
defusedxml = "^0.7.1"
black = "^24.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
coverage = "^7.1.0"
sigma-cli = "^1.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
line_length = 100
profile = "black"
